# aniterm

./: .SRCINFO  .gitignore  CODE_OF_CONDUCT.md  PKGBUILD  README.md  aniterm  pyproject.toml
src/aniterm/: __init__.py  __main__.py
