[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "aniterm"
version = "1.0.5"
description = "Stream anime from your terminal"
readme = "README.md"
license = { text = "GPL-3.0-only" }
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/amalxloop/aniterm"

[project.scripts]
aniterm = "aniterm:main"

[tool.setuptools.packages.find]
where = ["src"]
